# g1

./: .gitignore  README.md  Unitree_G1_Agent_Development_Guide.md  agent.py  fastdds_no_shm.xml  g1.py  keywords.txt  llm.py  pyproject.toml  run.sh  talk.py  tools.py
.trae/specs/improve-agent-tools/: checklist.md  spec.md  tasks.md
core/: __init__.py  bridge.py  chat.py  stream.py  vision.py  voice.py
