[project]
name = "yushu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.24",
    "notebook>=7.5.5",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "uploader>=0.5.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
